fix definition and example spacing in Meaning component

--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -13,4 +13,6 @@
 	opacity: 0.8;
 	font-style: italic;
 	font-size: 17px;
+	margin-top: 0.1rem;
+	margin-bottom: 0.5rem;
 }
